# finetl

./: README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/finetl/: __init__.py  cleaner.py  models.py  validator.py
tests/: test_cleaner.py  test_models.py  test_validator.py
